updated text and fixed containers on smaller sizes

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -846,6 +846,7 @@ header
 @media (max-width: 767px) {
   .main-banner .left-content h2 {
     font-size: 2rem !important;
+    line-height: 52px !important;
   }
 }
 
@@ -1089,6 +1090,12 @@ Services Style
   margin: 0 auto;
 }
 
+@media (max-width: 425px) {
+  .service-item {
+    max-height: 350px !important;
+  }
+}
+
 .service-item {
   position: relative;
   z-index: 1;
@@ -1119,7 +1126,6 @@ Services Style
 .service-item p {
   transition: all 0.3s;
   font-size: 15px;
-  margin-bottom: 20px;
 }
 
 .service-item:hover h4,
@@ -1198,6 +1204,7 @@ About Us
 
 .about-us {
   padding-top: 130px;
+  padding-bottom: 100px;
   position: relative;
 }
 
@@ -1230,11 +1237,10 @@ About Us
 
 .about-us .box-item {
   box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.07);
-  padding: 10px 30px;
+  padding: 30px;
   background-color: #fff;
   border-radius: 40px;
-  margin-bottom: 30px;
-  height: 170px;
+  height: 100%;
 }
 
 .about-us .box-item h4 a {
